<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="6dp"
    android:background="@android:color/white"
    android:layout_marginBottom="2dp"
    android:elevation="2dp">

    <TextView
        android:id="@+id/textTaskTitle"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="14sp"
        android:textColor="#000000"
        android:gravity="center"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/textTaskDescription"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="14sp"
        android:textColor="#000000"
        android:gravity="center"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/textTaskDate"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="14sp"
        android:textColor="#000000"
        android:gravity="center"
        android:padding="4dp"
        android:maxLines="1"
        android:ellipsize="end" />


    <TextView
        android:id="@+id/textTaskTime"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="14sp"
        android:textColor="#000000"
        android:gravity="center"
        android:padding="4dp"/>
</LinearLayout>