<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginContainer"
        android:layout_width="377dp"
        android:layout_height="356dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <EditText
            android:id="@+id/username"
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_marginBottom="24dp"
            android:alpha="0.7"
            android:autofillHints="username"
            android:backgroundTint="@color/primary"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/header_text"
            android:textColorHint="@color/header_text"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_marginBottom="36dp"
            android:alpha="0.7"
            android:autofillHints="password"
            android:backgroundTint="@color/primary"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="@color/header_text"
            android:textColorHint="@color/header_text"
            app:layout_constraintBottom_toTopOf="@+id/signup_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/SignUp"
            android:layout_width="222dp"
            android:layout_height="71dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/boldonse"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/header_text"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.771" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="228dp"
            android:layout_height="46dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/primary"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/acc_exists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/already_acc"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>